--- a/app/src/main/res/layout/activity_nampass.xml
+++ b/app/src/main/res/layout/activity_nampass.xml
@@ -3,74 +3,47 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RegisterActivity"
     android:background="@drawable/background"
-    >
 
-
-    <EditText
-        android:id="@+id/Register_email"
+    android:layout_height="match_parent"
+    tools:context=".Nampass">
+    <AutoCompleteTextView
+        android:id="@+id/Register_username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="CONFIRM EMAIL"
-        android:inputType="textEmailAddress"
-
+        android:hint="USERNAME"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.415"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.044" />
+        app:layout_constraintVertical_bias="0.046" />
 
-    <EditText
-        android:id="@+id/Register_password"
+    <AutoCompleteTextView
+        android:id="@+id/Address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="PASSWORD"
-        android:inputType="textPassword"
-
+        android:hint="Address"
         android:textColor="#FFFFFF"
+
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.182" />
+        app:layout_constraintVertical_bias="0.227" />
 
-    <EditText
-        android:id="@+id/Register_confirm_password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="CONFIRM PASSWORD"
-        android:inputType="textPassword"
-
-        android:textColor="#FFFFFF"
-        android:textColorHint="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.325" />
 
     <Button
         android:id="@+id/Register_signup"
@@ -81,15 +54,15 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#34495e"
-        android:onClick="signUp"
+        android:onClick="Next"
 
-        android:text="Signup"
+        android:text="Save"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.539" />
+        app:layout_constraintVertical_bias="0.449" />
 
 </android.support.constraint.ConstraintLayout>
